--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Voronoi - 地名标签云</title>
+  <title>地名标签云(Voronoi版)</title>
   <script>
     window._AMapSecurityConfig = {
       securityJsCode: 'a45b8fdd549065da27a9395c8d5d87bd',
