--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/img/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>地名标签云(Voronoi版)</title>
   <script>
